zero-schema-macros/tests/ui/fail/11_zero_length_array.rs
use zero_schema_macros::zero;

#[zero]
struct EmptyArray {
    values: [u8; 0],
}

fn main() {}
